force-app/main/default/objects/Project_Health_Update__c/Project_Health_Update__c.object-meta.xml
<CustomObject>
    <label>Project Health Update</label>
    <nameField>
        <displayFormat>PH-{0000}</displayFormat>
        <label>NameId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Health Updates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>