force-app/main/default/objects/Project_Health_Update__c/fields/Any_Eventuality__c.field-meta.xml
<CustomField>
    <fullName>Any_Eventuality__c</fullName>
    <label>Any Eventuality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Unhappy regarding work</fullName>
            </value>
            <value>
                <fullName>Manager Unhappy regarding Leave/attentive ness</fullName>
            </value>
            <value>
                <fullName>Project too complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>