force-app/main/default/objects/Project_Health_Update__c/fields/Deployment_Tool_Used__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Tool_Used__c</fullName>
    <label>Deployment Tool Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Sets</fullName>
            </value>
            <value>
                <fullName>AutoRABIT</fullName>
            </value>
            <value>
                <fullName>GIT</fullName>
            </value>
            <value>
                <fullName>FlowSum</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>SFDX CLI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>