force-app/main/default/objects/Project_Health_Update__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>