force-app/main/default/objects/Project_Health_Update__c/fields/Latest_Health_Field__c.field-meta.xml
<CustomField>
    <fullName>Latest_Health_Field__c</fullName>
    <formula>CASE(
TEXT( Health_Status__c ),
&quot;Red&quot;, &quot;🔴&quot;,
&quot;Orange&quot;, &quot;🟠&quot;,
&quot;Green&quot;, &quot;🟢&quot;,
&quot;❓ Unknown&quot;
)</formula>
    <label>Latest Health Status</label>
    <type>Text</type>
</CustomField>