force-app/main/default/objects/Project_Health_Update__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Project__r.Name &amp; &quot; - &quot; &amp; 
TEXT(
    IF(
        ISBLANK(Date__c),
        DATEVALUE(CreatedDate),
        Date__c
    )
) &amp; &quot; - Update&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>