force-app/main/default/objects/Project_Health_Update__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirement Gathering</fullName>
            </value>
            <value>
                <fullName>Developer Assignment Pending</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>Business Approval</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>