force-app/main/default/objects/Project_Health_Update__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Project Health Updates</relationshipLabel>
    <relationshipName>Project_Health_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>