force-app/main/default/objects/Project_Health_Update__c/fields/Resource_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Resource_To_Assign__c</fullName>
    <formula>Project__r.Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource To Assign</label>
    <type>Text</type>
</CustomField>