force-app/main/default/objects/Project_Health_Update__c/fields/Ticket_Type_for_Developer__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_for_Developer__c</fullName>
    <label>Ticket Type for Developer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>