force-app/main/default/objects/Project_Health_Update__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <formula>IF(
        ISBLANK(Date__c),
        DATEVALUE(CreatedDate),
        Date__c
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>