force-app/main/default/objects/Project_Health_Update__c/fields/Work_Done_so_far__c.field-meta.xml
<CustomField>
    <fullName>Work_Done_so_far__c</fullName>
    <label>Work Done so far</label>
    <length>255</length>
    <type>Text</type>
</CustomField>