force-app/main/default/objects/Project_Health_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Latest_Health_Field__c</columns>
    <columns>Project__c</columns>
    <columns>Update_Date__c</columns>
    <columns>Manager_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>