force-app/main/default/objects/Project_Health_Update__c/listViews/Autodesk_Project.listView-meta.xml
<ListView>
    <fullName>Autodesk_Project</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Health_Status__c</columns>
    <columns>Update_Date__c</columns>
    <columns>Latest_Health_Field__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Autodesk</value>
    </filters>
    <label>Autodesk Project</label>
</ListView>