force-app/main/default/objects/Project_Health_Update__c/listViews/Cloud_Labz_Project_Update.listView-meta.xml
<ListView>
    <fullName>Cloud_Labz_Project_Update</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>cloudLabz</value>
    </filters>
    <label>Cloud Labz Project Update</label>
</ListView>