force-app/main/default/objects/Project_Health_Update__c/listViews/Make_a_Wish_Project.listView-meta.xml
<ListView>
    <fullName>Make_a_Wish_Project</fullName>
    <columns>Name__c</columns>
    <columns>Health_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Make a wish</value>
    </filters>
    <label>Make a Wish Project</label>
</ListView>